--- a/styles/styles.css
+++ b/styles/styles.css
@@ -557,6 +557,7 @@ button {
   font-size: var(--font-size-16);
   font-weight: 500;
   letter-spacing: var(--letter-spacing-1);
+  text-decoration: none;
 }
 
 .button-container a > strong,
@@ -578,8 +579,7 @@ button {
 }
 
 .button-container a.tertiary {
-  height: 20px;
-  line-height: 20px;
+  line-height: var(--spacer-element-06);
   align-items: end;
 }
 
@@ -661,14 +661,15 @@ a.button span.icon.bookmark {
 
 /* Tertiary (Link) Button */
 .button-container > a.tertiary:not(.has-icon) {
+  display: inline-block;
   border-bottom: 2px solid var(--primary-purple);
+  height: 20px;
 }
 
 .button-container > a.tertiary.has-icon::before {
   content: '';
   position: absolute;
   width: calc(100% - 24px);
-  height: 1.1em;
   border-bottom: 2px solid var(--primary-purple);
 }
 
@@ -716,7 +717,7 @@ a.button span.icon.bookmark {
 main p a:not(.button):any-link {
   text-decoration: none;
   color: var(--primary-purple);
-  border-bottom: 2px solid var(--primary-purple);
+  border-bottom: 1px solid var(--primary-purple);
 }
 
 main h2 a:not(.button):any-link {
